--- a/cwru_davinci_action/CMakeLists.txt
+++ b/cwru_davinci_action/CMakeLists.txt
@@ -67,7 +67,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate actions in the 'action' folder
  add_action_files(
    FILES
-   needleDrive.action
+   NeedleDrive.action
+   NeedleExtraction.action
  )
 
 ## Generate added messages and services with any dependencies listed here
